--- a/src/pages/list-master/list-master.html
+++ b/src/pages/list-master/list-master.html
@@ -2,27 +2,25 @@
 
   <ion-navbar>
     <ion-title>{{ 'LIST_MASTER_TITLE' | translate }}</ion-title>
-
-    <ion-buttons end>
-      <button ion-button icon-only (click)="addItem()">
-        <ion-icon name="add"></ion-icon>
-      </button>
-    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
 
 <ion-content>
-
+  <ion-select multiple="false" #MySelect (ionChange)="onChange($event)">
+    <ion-option value="All" selected>All Status</ion-option>
+    <ion-option value="pending">Pending</ion-option>
+    <ion-option value="rejected">Rejected</ion-option>
+    <ion-option value="approved">Approved</ion-option>
+  </ion-select>
   <ion-list>
     <ion-item-sliding *ngFor="let item of currentItems">
-      <button ion-item (click)="openItem(item)">
-        <ion-avatar item-start>
-          <img [src]="item.profilePic" />
-        </ion-avatar>
-        <h2>{{item.name}}</h2>
-        <p>{{item.about}}</p>
-        <ion-note item-end *ngIf="item.note">{{item.note}}</ion-note>
+      <button ion-item (click)="openItem(item)" *ngIf="item.Ebeln">
+        <h2>{{item.Ebeln}}</h2>
+        <p>Created Date: {{item.Aedat}}</p>
+        <p>Created time: {{item.Utime}}</p>
+        <p>Net value: {{item.Netwr}}</p>
+        <p>Current status: {{item.Status}}</p>
       </button>
 
       <ion-item-options>
