--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,19 +1,19 @@
 <ion-header>
-
   <ion-navbar>
     <ion-title>{{ 'LOGIN_TITLE' | translate }}</ion-title>
   </ion-navbar>
-
 </ion-header>
-
 
 <ion-content>
   <form (submit)="doLogin()">
     <ion-list>
-
       <ion-item>
         <ion-label fixed>{{ 'EMAIL' | translate }}</ion-label>
-        <ion-input type="email" [(ngModel)]="account.email" name="email"></ion-input>
+        <ion-input
+          type="email"
+          [(ngModel)]="account.username"
+          name="email"
+        ></ion-input>
       </ion-item>
 
       <!--
@@ -27,13 +27,18 @@
 
       <ion-item>
         <ion-label fixed>{{ 'PASSWORD' | translate }}</ion-label>
-        <ion-input type="password" [(ngModel)]="account.password" name="password"></ion-input>
+        <ion-input
+          type="password"
+          [(ngModel)]="account.password"
+          name="password"
+        ></ion-input>
       </ion-item>
 
       <div padding>
-        <button ion-button color="primary" block>{{ 'LOGIN_BUTTON' | translate }}</button>
+        <button ion-button color="primary" block>
+          {{ 'LOGIN_BUTTON' | translate }}
+        </button>
       </div>
-
     </ion-list>
   </form>
 </ion-content>
